--- a/public/assets/email-templates/invite.html
+++ b/public/assets/email-templates/invite.html
@@ -2,6 +2,6 @@
   <body>
     <h2>Welcome to Receevi!</h2>
     <p>Thank you for signing up. Please confirm your email to get started.</p>
-    <p><a href="{{ .SiteURL }}/auth/confirm?token_hash={{ .TokenHash }}&type=signup&next=/update-password">Confirm your email</a></p>
+    <a href="{{ .ConfirmationURL }}&next=/update-password">Confirm your email</a>  
   </body>
 </html>
